# BigAdd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blocks.c  blocks.h  errhandle.c  errhandle.h  fileio.c  fileio.h  identifier.c  identifier.h  keyword.c  keyword.h  linetrckr.h  lxanalyzer.c  lxanalyzer.h  main.c  parser.c  parser.h  script.ba  script.lx  str.c  variable.c  variable.h  word.c  word.h
.github/: script.sh
.github/workflows/: cmake.yml
include/BigInt/: README.md  bigint.h
include/Blocks/: README.md  blocks.h
include/ErrorHandle/: README.md  errhandle.h
include/File_IO/: README.md  fileio.h
include/IdentifierKeeper/: README.md  identifier.h
include/KeyWord/: README.md  keyword.h
include/LexicalAnalyzer/: README.md  lxanalyzer.h
include/Parser/: README.md  parser.h
include/String/: README.md  str.h
include/VariableStack/: README.md  variable.h
include/Word/: README.md  word.h
src/: main.c
src/BigInt/: bigint.c
src/Blocks/: blocks.c
src/ErrorHandle/: errhandle.c
src/File_IO/: fileio.c
src/IdentifierKeeper/: identifier.c
src/KeyWord/: keyword.c
src/LexicalAnalyzer/: lxanalyzer.c
src/Parser/: parser.c
src/String/: str.c
src/VariableStack/: variable.c
src/Word/: word.c
testFiles/: 1.ba  1.lx  10.ba  11.ba  12.ba  13.ba  14.ba  15.ba  16.ba  17.ba  18.ba  19.ba  2.ba  3.ba  4.ba  5.ba  6.ba  7.ba  9.ba  correct1.ba  correct2.ba  pruebas.ba  script.lx
